--- a/142log.md
+++ b/142log.md
@@ -10,7 +10,7 @@
 
 4 $$\left( A\vee B \right)\vee C= A\vee \left( B\vee C \right)$$
 
-
+   
 5 
 
 $$(A \wedge B) \vee C=(A \vee C) \wedge (B \vee C)$$
@@ -39,7 +39,7 @@ $$A\vee A= A$$
 12
 
 
-13
+13 $$A\vee \left( A\wedge B \right)=A$$
 
 
 14 $$A \wedge (A \vee B) = A$$
